<resources>
    <string name="app_name">Notify Me!</string>
    <string name="channel_name">Notify Me! 通知频道</string>

    <string name="edit_category">编辑分类</string>
    <string name="category">分类</string>
    <string name="notification">通知</string>
    <string name="share">共享</string>
    <string name="me">我</string>
    <string name="rule_name">任务名</string>
    <string name="duration_minutes">时间间隔（分钟）</string>
    <string name="to_load_url">要加载的URL</string>
    <string name="code">代码</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="no_rule_hint">根本就没有什么规则~ ,,ԾㅂԾ,,</string>
    <string name="no_message_hint">根本就没有什么消息~ ,,ԾㅂԾ,,</string>
    <string name="settings">设置</string>
    <string name="not_logged_in">未登录</string>
    <string name="language">语言</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="english">English</string>
    <string name="edit_rule">编辑任务</string>
    <string name="save">保存</string>
    <string name="new_rule">新建任务</string>
    <string name="create">创建</string>
    <string name="please_complete_fields">请输入完整的规则</string>
    <string name="test">测试</string>
    <string name="cancel">取消</string>
    <string name="testing">测试中</string>
    <string name="test_timeout">测试超时</string>
    <string name="test_result">测试结果</string>
    <string name="title">标题</string>
    <string name="content">正文</string>
    <string name="image">图像</string>
    <string name="ok">确定</string>
    <string name="rename">重命名</string>
    <string name="category_name">分类名称</string>
    <string name="new_category_name">新分组名</string>
    <string name="no_empty">不能为空</string>
    <string name="duplicate_name">名称重复</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="are_you_sure_to_remove_category">确认要删除分组</string>
    <string name="new_name">新名称</string>
    <string name="link">链接</string>
    <string name="confirm">确认</string>
    <string name="under_construction">建设中 m( _ _ )m</string>
    <string name="clear_all">清除所有消息</string>
    <string name="amount_of_messages">消息数</string>
    <string name="internal_browser">内置浏览器</string>
    <string name="manuals">使用指南</string>
    <string name="address">地址</string>
    <string name="are_you_sure_to_clear_all_messages">确认要清除所有已推送消息</string>
    <string name="script_error">脚本错误</string>
    <string name="error_message">错误信息</string>
    <string name="every">间隔</string>
    <string name="minutes">分钟</string>
    <string name="enable_image_loading_invalid_when_exiting">启用图片加载（退出失效）</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="repeat_password">重复密码</string>
    <string name="please_input_username_and_password">请输入用户名和密码</string>
    <string name="please_input_valid_username">请输入有效的手机号</string>
    <string name="incoherence_passwords">两次输入的密码不一致</string>
    <string name="sign_up_succeeded_please_sign_in">注册成功，请登录</string>
    <string name="sign_in_succeeded">登录成功</string>
    <string name="sign_in_canceled">登录取消</string>
    <string name="sign_out">退出登录</string>
    <string name="are_you_sure_to_sign_out">确定要退出登录</string>
    <string name="logs">日志</string>
    <string name="clear">清除</string>
    <string name="backup">备份</string>
    <string name="restore">还原</string>
    <string name="backup_succeed">备份成功</string>
    <string name="backup_failed">备份失败</string>
    <string name="restore_succeed">还原成功</string>
    <string name="restore_failed">还原失败</string>
    <string name="sign_in_failed">登录失败</string>
    <string name="sign_up_failed">注册失败，该账号可能已被注册</string>
</resources>
