<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        app:title="@string/settings"
        app:titleTextColor="@color/white"
        style="@style/TranslucentToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/dlli_language"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <TextView
            android:text="@string/language"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/simplified_chinese"
            android:id="@+id/tv_language"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/clear_cache"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:text="@string/clear_all"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/amount_of_messages"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/msg_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:textSize="12sp"/>

        </LinearLayout>



    </LinearLayout>


</LinearLayout>